@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  +files/1.1.8/0001-no_icu_pc.patch, 389-adminutil-1.1.8-r1.ebuild,
+  -files/389-adminutil-1.1.8-no_icu_pc.patch:
+  move patch to PV dir
+
   06 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   +389-adminutil-1.1.8-r1.ebuild:
   rewrite to EAPI 2
